# bt2i2c

./: .gitignore  .gitmodules  CMakeLists.txt  HARDWARE.md  Makefile  README.md
host/pico_receiver/: CMakeLists.txt  receiver.c
host/pico_receiver/build_receiver/: CMakeCache.txt  Makefile  cmake_install.cmake  pico_receiver.dis
host/pico_receiver/build_receiver/pico-sdk/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/docs/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default.dis  bs2_default_padded_checksummed.S  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/rp2040/pico_platform/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/pico-sdk/tools/: Makefile  cmake_install.cmake
host/pico_receiver/build_receiver/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
host/pico_receiver/build_receiver/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
src/: CMakeLists.txt  bt_classic.c  bt_classic.h  bt_keyboard.c  bt_keyboard.h  btstack_config.h  display.c  display.c.bak  display.h  display_lovyan.cpp  fifo.c  fifo.h  font8x8.h  i2c_slave.c  i2c_slave.h  interrupt.c  interrupt.h  lgfx_compat.hpp  lgfx_config.hpp  main.c  pins.h  reg.c  reg.h  test_mode.c  test_mode.h
(+159 files in other folders)
